# MultiSOL

./: .gitignore  README.md  pyproject.toml  setup.cfg  test.py
multisol/tf/: distributions.py  metrics.py  multisol.py
multisol/torch/: distributions.py  metrics.py  multisol.py
