[metadata]
name = multisol
version = 0.1.0
author = Francesco Marchetti, Edoardo Legnaro, Sabrina Guastavino
author_email = edoardo.legnaro@edu.unige.it
description = A multi-framework implementation of Score-Oriented Loss (SOL) for PyTorch and TensorFlow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edoardolegnaro/MultiSOL
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    torch
    tensorflow
    joblib
    matplotlib
    scikit-learn

[options.packages.find]
where = .
exclude =
    tests*
